slogan and arrow added

--- a/index.html
+++ b/index.html
@@ -50,7 +50,15 @@
                         <div class="contact">Contact</div>
                     </ul>
                 </div>
-                <div class="header-slogan">WE ARE CREATIVES</div>
+
+                <div class="header-slogan">
+                    <span class="text">WE ARE CREATIVES</span>
+                    <img
+                        class="arrow"
+                        src="./images/icon-arrow-down.svg"
+                        alt=""
+                    />
+                </div>
             </div>
 
             Transform your brand We are a full-service creative agency
