--- a/index.html
+++ b/index.html
@@ -22,7 +22,7 @@
         <link rel="preconnect" href="https://fonts.googleapis.com" />
         <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin />
         <link
-            href="https://fonts.googleapis.com/css2?family=Fraunces:wght@700;900&display=swap"
+            href="https://fonts.googleapis.com/css2?family=Fraunces:wght@200;700;900&display=swap"
             rel="stylesheet"
         />
         <title>Frontend Practice</title>
@@ -40,6 +40,7 @@
     </head>
     <body>
         <div class="wrapper">
+
             <div class="header">
                 <div class="navbar">
                     <img class="logo" src="./images/logo.svg" alt="" />
@@ -47,7 +48,7 @@
                         <span>About</span>
                         <span>Services</span>
                         <span>Projects</span>
-                        <div class="contact">Contact</div>
+                        <div class="contact">CONTACT</div>
                     </ul>
                 </div>
 
@@ -61,10 +62,27 @@
                 </div>
             </div>
 
-            Transform your brand We are a full-service creative agency
-            specializing in helping brands grow fast. Engage your clients
-            through compelling visuals that do most of the marketing for you.
-            Learn more Stand out to the right audience Using a collaborative
+            <div class="section1">
+              <div class="left">
+                <div class="text-container">
+                  <h1>Transform your brand</h1>
+                  <p>
+                      We are a full-service creative agency specializing
+                      in helping brands grow fast. Engage your clients
+                      through compelling visuals that do most of the
+                      marketing for you.
+                  </p>
+                  <p><h2>Learn more</h2></p>
+                </div>                  
+              </div>
+              <div class="right">
+                <img src="./images/desktop/image-transform.jpg" alt="" class="egg">
+              </div>
+          </div>
+
+          <!--
+
+Stand out to the right audience Using a collaborative
             formula of designers, researchers, photographers, videographers, and
             copywriters, we’ll build and extend your brand in digital places.
             Learn more Graphic design Great design makes you memorable. We
@@ -88,6 +106,10 @@
                     >Frontend Mentor</a
                 >. Coded by <a href="#">Your Name Here</a>.
             </div>
+
+          -->
+
+            
         </div>
     </body>
 </html>
