--- a/index.html
+++ b/index.html
@@ -80,12 +80,29 @@
               </div>
           </div>
 
+          <div class="section2">
+            <div class="left">
+              <img src="./images/desktop/image-stand-out.jpg" alt="">
+            </div>
+            <div class="right">
+              <div class="text-container">
+                <h1>Stand out to the right audience</h1>
+                <p>
+                  Using a collaborative
+                  formula of designers, researchers, photographers, videographers, and
+                  copywriters, we’ll build and extend your brand in digital places.
+                </p>
+                <p>
+                  <h2>Learn more</h2>
+                </p>
+              </div>
+            </div>
+          </div>
+
           <!--
 
-Stand out to the right audience Using a collaborative
-            formula of designers, researchers, photographers, videographers, and
-            copywriters, we’ll build and extend your brand in digital places.
-            Learn more Graphic design Great design makes you memorable. We
+ 
+            Graphic design Great design makes you memorable. We
             deliver artwork that underscores your brand message and captures
             potential clients’ attention. Photography Increase your credibility
             by getting the most stunning, high-quality photos that improve your
