--- a/index.html
+++ b/index.html
@@ -99,14 +99,36 @@
             </div>
           </div>
 
+          <div class="section3">
+            <div class="left">
+              <img src="./images/desktop/image-graphic-design.jpg" alt="">
+              <div class="text-container">
+                <h3>Graphic design</h3>
+                <p>
+                  Great design makes you memorable. We
+                  deliver artwork that underscores your brand message and captures
+                  potential clients’ attention.
+                </p>
+              </div>              
+            </div>
+            
+            <div class="right">
+              <img src="./images/desktop/image-photography.jpg" alt="">
+              <div class="text-container">
+                <h3>Photography</h3>
+                <p>
+                  Increase your credibility
+                  by getting the most stunning, high-quality photos that improve your
+                  business image.
+                </p>
+              </div>
+            </div>
+          </div>
+
           <!--
 
  
-            Graphic design Great design makes you memorable. We
-            deliver artwork that underscores your brand message and captures
-            potential clients’ attention. Photography Increase your credibility
-            by getting the most stunning, high-quality photos that improve your
-            business image. Client testimonials We put our trust in Sunnyside
+           Client testimonials We put our trust in Sunnyside
             and they delivered, making sure our needs were met and deadlines
             were always hit. Emily R. Marketing Director Sunnyside’s enthusiasm
             coupled with their keen interest in our brand’s success made it a
