--- a/index.html
+++ b/index.html
@@ -111,7 +111,7 @@
                 </p>
               </div>              
             </div>
-            
+
             <div class="right">
               <img src="./images/desktop/image-photography.jpg" alt="">
               <div class="text-container">
@@ -125,16 +125,51 @@
             </div>
           </div>
 
+          <div class="section4 testimonials">
+            <h3>CLIENT TESTIMONIALS</h3>
+            <div class="clients">
+              <div class="client">
+                <img src="./images/image-emily.jpg" alt="">
+                <p>
+                  We put our trust in Sunnyside
+                  and they delivered, making sure our needs were met and deadlines
+                  were always hit.
+                </p>
+                <div class="details">
+                  <h4>Emily R.</h4>
+                  <h5>Marketing Director</h5>
+                </div>
+              </div>
+              <div class="client">
+                <img src="./images/image-thomas.jpg" alt="">
+                <p>
+                  Sunnyside’s enthusiasm
+                  coupled with their keen interest in our brand’s success made it a
+                  satisfying and enjoyable experience.
+                </p>
+                <div class="details">
+                  <h4>Thomas S.</h4>
+                  <h5>Chief Operating Officer</h5>
+                </div>
+              </div>
+              <div class="client">
+                <img src="./images/image-jennie.jpg" alt="">
+                <p>
+                  Incredible end result! Our sales increased over 400% when we
+            worked with Sunnyside. Highly recommended!
+                </p>
+                <div class="details">
+                  <h4>Jennie F.</h4>
+                  <h5>Business Owner</h5>
+                </div>
+              </div>
+            </div>
+        </div>
+
           <!--
 
  
-           Client testimonials We put our trust in Sunnyside
-            and they delivered, making sure our needs were met and deadlines
-            were always hit. Emily R. Marketing Director Sunnyside’s enthusiasm
-            coupled with their keen interest in our brand’s success made it a
-            satisfying and enjoyable experience. Thomas S. Chief Operating
-            Officer Incredible end result! Our sales increased over 400% when we
-            worked with Sunnyside. Highly recommended! Jennie F. Business Owner
+                    
             About Services Projects Contact
 
             <div class="attribution">
