desktop version done

--- a/index.html
+++ b/index.html
@@ -166,10 +166,31 @@
             </div>
         </div>
 
-          <!--
+        <div class="section5">
+          <img src="./images/desktop/image-gallery-milkbottles.jpg" alt="">
+          <img src="./images/desktop/image-gallery-orange.jpg" alt="">
+          <img src="./images/desktop/image-gallery-cone.jpg" alt="">
+          <img src="./images/desktop/image-gallery-sugarcubes.jpg" alt="">
+        </div>
 
- 
-                    
+        <div class="footer">
+          <div class="logo">            
+            <img src="./images/logo.svg" alt="">
+          </div>
+          <div class="footer-navigation">
+            <span>About</span>
+            <span>Services</span>
+            <span>Projects</span>
+          </div>
+          <div class="footer-media">
+            <img src="./images/icon-facebook.svg" alt="">
+            <img src="./images/icon-instagram.svg" alt="">
+            <img src="./images/icon-twitter.svg" alt="">
+            <img src="./images/icon-pinterest.svg" alt="">
+          </div>
+        </div>
+
+          <!--                   
             About Services Projects Contact
 
             <div class="attribution">
